@@ -79,9 +79,9 @@ copyright = u'2011, Rodrigo Moraes'
 # built documents.
 #
 # The short X.Y version.
-version = '2.2.3'
+version = '2.3'
 # The full version, including alpha/beta/rc tags.
-release = '2.2.3'
+release = '2.3'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
