@@ -37,7 +37,7 @@ from setuptools import setup
 
 setup(
     name = 'webapp2',
-    version = '2.2.3',
+    version = '2.3',
     license = 'Apache Software License',
     url = 'http://webapp-improved.appspot.com',
     description = "Taking Google App Engine's webapp to the next level!",
