@@ -58,7 +58,7 @@ except ImportError:  # pragma: no cover
                     "so webapp2 won't be thread-safe!")
 
 
-__version_info__ = (2, 2, 3)
+__version_info__ = (2, 3)
 __version__ = '.'.join(str(n) for n in __version_info__)
 
 #: Base HTTP exception, set here as public interface.
